--- a/MoreScarabs.csproj
+++ b/MoreScarabs.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <AssemblyName>com.binbin.morescarabs</AssemblyName>
     <Product>More Scarabs</Product>
-    <Version>1.0.0</Version>
+    <Version>1.1.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <RestoreAdditionalProjectSources>
@@ -34,13 +34,13 @@
     <Reference Include="Assembly-CSharp">
       <HintPath>../../!libs/Assembly-CSharp.dll</HintPath>
     </Reference>
-    <Reference Include="com.stiffmeds.obeliskialessentials">
-      <HintPath>../../!libs/Obeliskial_Essentials.dll</HintPath>
-    </Reference>
-    <Reference Include="com.stiffmeds.obeliskialcontent">
-      <HintPath>../../!libs/Obeliskial_Content.dll</HintPath>
-    </Reference>
+    
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Copy SourceFiles="$(TargetPath)" DestinationFolder="../../../plugins" />
+    <Copy SourceFiles="$(TargetPath)" DestinationFolder="MoreScarabs/BepInEx/plugins" />
+  </Target>
 
 
 </Project>
